output/facebook/rocksdb/155.txt
clang won't compile with static_cast in https://github.com/facebook/rocksdb/commit/bd1105aa5a550224b1655ad38fcac60546df8a92#diff-5b717965879a622d11268aaf03fb19c8R1518 .
In fact replacing `static_cast` with `reinterpret_cast` works.

```
clang++ -g -Wall -Werror -I. -I./include -std=c++11  -DROCKSDB_PLATFORM_POSIX  -DOS_MACOSX -DROCKSDB_ATOMIC_PRESENT -DSNAPPY -DGFLAGS=google -DZLIB -DBZIP2   -DHAVE_JEMALLOC -O2 -fno-omit-frame-pointer -momit-leaf-frame-pointer -Woverloaded-virtual -c util/build_version.cc -o util/build_version.o
clang++ -g -Wall -Werror -I. -I./include -std=c++11  -DROCKSDB_PLATFORM_POSIX  -DOS_MACOSX -DROCKSDB_ATOMIC_PRESENT -DSNAPPY -DGFLAGS=google -DZLIB -DBZIP2   -DHAVE_JEMALLOC -O2 -fno-omit-frame-pointer -momit-leaf-frame-pointer -Woverloaded-virtual -c util/env_posix.cc -o util/env_posix.o
util/env_posix.cc:1518:19: error: static_cast from '_opaque_pthread_t *' to 'unsigned long long' is not allowed
                  static_cast<long long unsigned int>(terminating_thread));
                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
```

